# KartNChibi

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  docker-compose.yml  env.example
client/: CMakeLists.txt
docs/: PROTOCOL.md  WORKFLOW_MASTER.md
docs/architecture/: CLIENT_ARCHITECTURE.md
docs/client/: CLIENT_STATES.md  LAUNCH_ARGS.md  UI_STATES.md
docs/formats/: FILE_FORMATS.md
docs/packets/: CMD_MAP.md  README.md  STRUCTURES.md
docs/packets/auth/: 0x01_LOGIN_RESPONSE.md  0x02_DISPLAY_MESSAGE.md  0x03_CHARACTER_CREATION_TRIGGER.md  0x03_TRIGGER.md  0x04_CHARACTER_CREATION_RESPONSE.md  0x04_REGISTRATION_RESPONSE.md  0x07_SESSION_INFO.md  0x0A_CONNECTION_OK.md  0x0B_ACK.md  0x0C_DATA_PAIRS.md  0x0D_FLAG_SET.md  0x12_HEARTBEAT_RESPONSE.md  0x12_SHOW_LOBBY.md  0x8E_INIT_RESPONSE.md  0x8E_NO_HANDLER.md  0xA6_HEARTBEAT.md  0xA7_SESSION_CONFIRM.md  0xAA_PLAYER_PREVIEW.md  CHARACTER_CREATION.md  PLAYER_INFO.md  README.md
docs/packets/chat/: 0x116_PLAYER_NAME.md  0x117_PLAYER_REMOVE.md  0x2A_WHISPER_ENABLE.md  0x2B_WHISPER_DISABLE.md  0x2D_CHAT_MESSAGE.md  0x2E_PLAYER_LEFT.md  0x6C_PLAYER_MESSAGE.md  0x6E_MESSAGE_DISPLAY.md  README.md
docs/packets/client/: 0x07_CLIENT_AUTH.md  0x19_SERVER_QUERY.md  0x2C_STATE_CHANGE.md  0x32_UNKNOWN.md  0x4D_REQUEST_DATA.md  0x73_DISCONNECT.md  0xD0_CLIENT_INFO.md  0xFA_FULL_STATE.md  README.md
docs/packets/game/: 0x100_POSITION_REMOVE.md  0x101_POSITION_UPDATE_A.md  0x102_POSITION_UPDATE_B.md  0x104_ACCESSORY_LIST.md  0x107_EXTENDED_DATA_LIST.md  0x109_LARGE_DATA.md  0x10D_ITEM_BLOCK.md  0x10F_ITEM_LIST_UPDATE.md  0x114_STRING_UPDATE.md  0x115_ITEM_VALUE.md  0x14_GAME_MODE.md  0x30_ROOM_STATE.md  0x31_POSITION.md  0x33_GAME_STATE.md  0x34_READY_FLAG.md  0x35_SCORE.md  0x36_LAP_INFO.md  0x37_ITEM_USE.md  0x38_ITEM_HIT.md  0x39_FINISH.md  0x3A_RESULTS.md  0x3B_COUNTDOWN.md  0x3C_RACE_END.md  0x3D_ROOM_STATE.md  0x3D_ROOM_STATUS.md  0x40_START_RACE.md  0x42_GAME_MODE.md  0x42_GAME_MODE_ALT.md  0x44_GAME_UPDATE.md  0x45_ITEM_USAGE.md  0x46_LARGE_GAME_STATE.md  0x47_PLAYER_ACTION.md  0x49_PLAYER_DATA.md  0x4B_GAME_EFFECT.md  0x4E_TIMESTAMP.md  0x54_SERVER_REDIRECT.md  0x57_RACE_STATUS.md  0x58_PLAYER_STATUS.md  0x5C_GAME_UPDATE_B.md  0x5F_ENTITY_STATE.md  (+12 more)
docs/protocol/: MESSAGES.md  PROTOCOL_OVERVIEW.md  README.md  STRUCTURES.md
docs/reverse/: IDA_GUIDE.md
engine/: CMakeLists.txt  KnCEngine.h
engine/animation/: AnimationEngine.h
include/: Types.h
include/core/: Application.h  StateManager.h
include/formats/: DdsLoader.h  NifLoader.h  NifLoader10.h  PakReader.h
include/input/: InputManager.h
include/network/: Connection.h  Packet.h  PacketDispatcher.h
include/states/: IGameState.h  StateChannel.h  StateLobby.h  StateLogo.h
launcher/: CMakeLists.txt  README.md
launcher/include/: Launcher.h  WebViewHost.h
launcher/resources/: KnCLauncher.manifest  launcher.rc
launcher/resources/web/: index.html
launcher/src/: Launcher.cpp  WebViewHost.cpp  main.cpp
server/: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
server/common/include/game/: Room.h
server/common/include/net/: Packet.h  Protocol.h  Session.h
server/game-server/: CMakeLists.txt
server/game-server/config/: game.json
server/game/include/: GameServer.h
server/game/include/handlers/: AntiCheatHandler.h  ChatHandler.h  GameHandler.h  GarageHandler.h  GhostHandler.h  InventoryHandler.h  LicenseHandler.h  LobbyHandler.h  MissionHandler.h  RaceHandler.h  RoomHandler.h  ScenarioHandler.h  ShopHandler.h
server/game/include/packets/: PacketBuilder.h
server/game/src/: GameServer.cpp  main.cpp
server/game/src/handlers/: AntiCheatHandler.cpp  ChatHandler.cpp
server/lib/: CMakeLists.txt
server/login/: CMakeLists.txt
server/login-server/include/: LoginServer.h
server/login-server/include/handlers/: AuthHandler.h  HandshakeHandler.h
server/scripts/: download-deps.ps1  download-deps.sh  setup_mariadb.bat
server/tests/: CMakeLists.txt
server/tools/: CMakeLists.txt
server/web-admin/: CMakeLists.txt
server/web-admin/config/: webadmin.json
server/web-admin/include/: AdminAPI.h  WebServer.h
server/web-admin/src/: WebServer.cpp  main.cpp
server/web-admin/static/: index.html
shared/: CMakeLists.txt  README.md
shared/include/shared/: Shared.h
shared/include/shared/core/: Result.h  Types.h
shared/include/shared/math/: Matrix4.h  Quat.h  Vec2.h  Vec3.h  Vec4.h
shared/include/shared/net/: Packet.h
shared/include/shared/platform/: WindowsLean.h
shared/src/: CMakeLists.txt  PakReader.h  simple_json.h
shared/src/include/config/: Config.h  IniConfig.h
shared/src/include/db/: Database.h
shared/src/include/game/: Player.h  Room.h
shared/src/include/logging/: Logger.h
shared/src/include/net/: Packet.h  Protocol.h  Session.h
shared/src/include/security/: BanManager.h  PacketValidator.h  RateLimiter.h
shared/src/src/config/: Config.cpp
shared/src/src/db/: Database.cpp
shared/src/src/game/: Player.cpp  Room.cpp
shared/src/src/logging/: Logger.cpp
shared/src/src/net/: Packet.cpp  Session.cpp
shared/src/src/security/: BanManager.cpp  PacketValidator.cpp  RateLimiter.cpp
tools/: CMakeLists.txt
tools/Network2 De-crypt/: Network2 Decrypt.cpp  Network2 Decrypt.vcxproj.filters
tools/Packer-Unpacker/: NKZIP Un-Packer.vcxproj  NKZIP Un-Packer.vcxproj.filters
tools/dat_manager/: analyze_pak.cpp  build.bat  dat_manager.cpp  dat_manager.ini  diagnose_nif.cpp  dump_nif.cpp  dump_nif_header.cpp  pak_analyze.cpp  pak_analyze2.cpp  pak_analyzer.cpp  pak_analyzer2.cpp  pak_analyzer3.cpp  pak_debug.cpp  pak_dump.cpp  pak_scan.cpp  pak_search.cpp
tools/dat_tool/: Main.cpp  NKZIP Un-Packer.sln  NKZIP.cpp  NKZIP.h  NKZIPFile.h
tools/network_decrypt/: Network2 Decrypt.sln  Network2 Decrypt.vcxproj
tools/packet_inspector/: KnC-Proxy.sln  KnC-Proxy.vcxproj  README.md  WS2_32.cpp  WS2_32.def  dinput8.cpp  dinput8.def  version.cpp  version.def  winmm.cpp  winmm.def
tools/proxy_dll/: EngineDLL_proxy.cpp  EngineDLL_proxy.def  build_proxy.bat
tools/race_prototype/: build.bat
(+89 files in other folders)
