# =============================================================================
# CLI Tools
# =============================================================================

# Packet Logger (à implémenter plus tard)
# add_executable(packet-logger
#     packet-logger/main.cpp
# )
# target_link_libraries(packet-logger PRIVATE knc-common)

# Pour l'instant, juste un placeholder
message(STATUS "Tools: placeholder (will be implemented later)")

